--- a/doc/5.IR.md
+++ b/doc/5.IR.md
@@ -16,6 +16,9 @@ IR需要包含
   - 结构化Uniform
   - Buffer Uniform
 - 贴图（取样器）
+  - sampler2d
+  - sampler2dShadow
+  - sampler2d FBO
 
 
 ### 状态
@@ -45,13 +48,14 @@ IR需要包含
 - default fbo
 - tf out
 
-
-
 ### 流水线
 
-- 绘制状态准备
 - 绘制指令
-- fbo与tf输入输出
+  - 完成一次绘制需要
+    - 所有状态到位
+    - 设置所有输入
+    - 设置所有输出
+    - 调用绘制
 - 其他特殊指令
   - blit
   - query
